--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,11 @@
         "classmap": [
             "Zebra_Database.php"
         ]
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/josephspurrier/Zebra_Database"
+        }
+    ]
 }
