--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.2.0"
     },
-    "version": "2.9.3",
+    "version": "2.9.4b",
     "autoload": {
         "classmap": [
             "Zebra_Database.php"
