--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 * text=auto
 
 /docs export-ignore
+/.github export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 composer.json export-ignore
