--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@
 
 /docs export-ignore
 /.github export-ignore
+/src export-ignore
+/node_modules export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 composer.json export-ignore
