--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
+# Don't include these files when users download a release
 /docs export-ignore
 /.github export-ignore
 /src export-ignore
@@ -8,3 +9,7 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 composer.json export-ignore
+package.json export-ignore
+package-lock.json export-ignore
+eslint.json export-ignore
+Gruntfile.js export-ignore
