--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "devDependencies": {
-    "grunt": "^1.5.2",
-    "grunt-cli": "^1.4.3",
+    "grunt": "^1.6.1",
+    "grunt-cli": "^1.5.0",
     "grunt-contrib-copy": "*",
-    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-cssmin": "^5.0.0",
     "grunt-contrib-jshint": "^3.2.0",
-    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-uglify": "^5.2.2",
     "grunt-contrib-watch": "*",
-    "grunt-eslint": "^24.0.0",
+    "grunt-eslint": "^25.0.0",
     "grunt-newer": "*",
     "grunt-notify": "*",
-    "grunt-sass": "^3.1.0",
-    "node-sass": "^7.0.1",
+    "grunt-sass-modern": "^3.3.0",
+    "grunt-string-replace": "^1.3.3",
+    "sass": "^1.83.0",
     "time-grunt": "^2.0.0"
   }
 }
