--- a/.gitattributes
+++ b/.gitattributes
@@ -2,14 +2,16 @@
 * text=auto
 
 # Don't include these files when users download a release
-/docs export-ignore
-/.github export-ignore
-/src export-ignore
-/node_modules export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 composer.json export-ignore
+composer.lock.json export-ignore
 package.json export-ignore
 package-lock.json export-ignore
 eslint.json export-ignore
 Gruntfile.js export-ignore
+/.github export-ignore
+/docs export-ignore
+/node_modules export-ignore
+/src export-ignore
+/tests export-ignore
